[package]
name = "advent-2020"
version = "0.1.0"
authors = ["Tim Eggert <tim@elbart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advent-01-1"
path = "src/01/1.rs"

[[bin]]
name = "advent-01-2"
path = "src/01/2.rs"

[[bin]]
name = "advent-02-1"
path = "src/02/1.rs"

[[bin]]
name = "advent-02-2"
path = "src/02/2.rs"

[[bin]]
name = "advent-03-1"
path = "src/03/1.rs"

[[bin]]
name = "advent-03-2"
path = "src/03/2.rs"

[[bin]]
name = "advent-04-1"
path = "src/04/1.rs"

[[bin]]
name = "advent-04-2"
path = "src/04/2.rs"
[[bin]]
name = "advent-05-1"
path = "src/05/1.rs"

[[bin]]
name = "advent-05-2"
path = "src/05/2.rs"
[[bin]]
name = "advent-06-1"
path = "src/06/1.rs"

[[bin]]
name = "advent-06-2"
path = "src/06/2.rs"

[[bin]]
name = "advent-07-1"
path = "src/07/1.rs"

[[bin]]
name = "advent-07-2"
path = "src/07/2.rs"

[dependencies]
regex = "1"
lazy_static = "1"